syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
  rpc UpdateTokens (UpdateTokensRequest) returns (UpdateTokensResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  string error = 1;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string error = 1;
  string refreshToken = 2;
  string token = 3;
}

// Validate

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  string error = 1;
  string userId = 2;
}

// UpdateTokens

message UpdateTokensRequest{
  string refreshToken = 1;
}

message UpdateTokensResponse{
  string error = 1;
  string refreshToken = 2;
  string token = 3;
}